tests/semantic_analysis/error/wrong_defined.c
wrong_defined\.c:3:5: error:.*